# fastapi-devcontainer-mvp

./: .env.example  .gitignore  .uvignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  LOGGING_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  TESTING_GUIDE.md  USER_SERVICE_LOGGING.md  UV_SETUP.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.simple.yml  docker-compose.unified.yml  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  Dockerfile.dev  Dockerfile.unified  README.md  logging.yaml  pyproject.toml
backend/app/: __init__.py  main_old.py  main_simple.py  main_unified.py  main_with_auth.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  users.py
backend/app/core/: __init__.py  config.py  environment.py  logging.py  logging_config.py  security.py  service_discovery.py
backend/app/examples/: logging_examples.py  user_service_logging_demo.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: __init__.py  user_service.py
backend/app/utils/: logging_decorators.py
backend/tests/: __init__.py  conftest.py  test_auth.py
frontend/: Dockerfile  app.py  app_demo.py  app_with_api.py  requirements.txt
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: demo-uv.sh  docker-start-simple.sh  docker-start-unified.sh  log-manager.sh  quick-demo.sh  setup-unified.sh  simple-start.sh  start-all.sh  start-demo.sh  start-enterprise.sh  start-with-auth.sh  start.sh  stop-all.sh  test-api.sh  test-complete.sh
